--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LoftSchool">
-        <!--<activity
-            android:name=".MainActivity"
+        <activity
+            android:name=".ItemActivity"
             android:exported="true">
-        </activity>-->
+
+        </activity>
 
         <activity
                 android:name="com.mas.loftmoney.AddItemActivity"
