--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mas.loftmoney">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".LoftApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="LoftMoney"
