--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         </activity>
         <activity
                 android:name="com.mas.loftmoney.AddItemActivity"
-                android:exported="true" >
+                android:exported="false" >
         </activity>
     </application>
 
