--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,11 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
+    implementation'androidx.lifecycle:lifecycle-livedata:2.4.1'
+    implementation'androidx.lifecycle:lifecycle-viewmodel:2.4.1'
+
+    implementation 'com.google.android.gms:play-services-auth:20.2.0'
+
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
 }
