--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".LoftApp"
+        android:name=".remote.LoftApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="LoftMoney"
@@ -13,16 +13,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LoftSchool">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".screens.main.MainActivity"
+            android:exported="false">
+        </activity>
+        <activity
+                android:name="com.mas.loftmoney.screens.add_item.AddItemActivity"
+                android:exported="false" >
+        </activity>
+        <activity
+            android:name=".screens.splash.SplashActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-                android:name="com.mas.loftmoney.AddItemActivity"
-                android:exported="false" >
+            android:name=".screens.login.LoginActivity"
+            android:exported="false" >
         </activity>
     </application>
 
