--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.mas.loftschool"
+        applicationId "com.mas.loftmoney"
         minSdk 21
         targetSdk 31
         versionCode 1
@@ -54,5 +54,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
 
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+
 
 }
